--- a/MiniManage/WebRoot/temppages/Mini_game.html
+++ b/MiniManage/WebRoot/temppages/Mini_game.html
@@ -58,8 +58,8 @@
 						<th data-options="field:'game_softwork',align:'center',width:80,sortable:true">软著</th>
 						<th data-options="field:'game_username',align:'center',width:80,sortable:true">账号</th>
 						<th data-options="field:'game_password',align:'center',width:80,sortable:true">密码</th>
-						<th data-options="field:'game_admin',align:'center',width:80,sortable:true">主体</th>
-						<th data-options="field:'game_adminwx',align:'center',width:80,sortable:true">运营者微信</th>
+						<th data-options="field:'game_admin',align:'center',width:80,sortable:true">管理员</th>
+						<th data-options="field:'game_adminwx',align:'center',width:80,sortable:true">管理员微信</th>
 						<th data-options="field:'game_cellphone',align:'center',width:80,sortable:true">手机号</th>
 						<th data-options="field:'game_iconfile',align:'center',width:80,sortable:true">IconZip文件</th>
 						<th data-options="field:'game_cheattype',align:'center',width:80,sortable:true">作弊类型</th>
@@ -142,10 +142,10 @@
 						<input class="easyui-textbox" id="game_password" name="game_password" style="width:90%" data-options="label:'密码:',required:true">
 					</div>
 					<div style="margin-bottom:20px">
-						<input class="easyui-textbox" id="game_admin" name="game_admin" style="width:90%" data-options="label:'主体:',required:true">
+						<input class="easyui-textbox" id="game_admin" name="game_admin" style="width:90%" data-options="label:'管理员:',required:true">
 					</div>
 					<div style="margin-bottom:20px">
-						<input class="easyui-textbox" id="game_adminwx" name="game_adminwx" style="width:90%" data-options="label:'运营者微信:',required:true">
+						<input class="easyui-textbox" id="game_adminwx" name="game_adminwx" style="width:90%" data-options="label:'管理员微信:',required:true">
 					</div>
 					<div style="margin-bottom:20px">
 						<input class="easyui-textbox" id="game_cellphone" name="game_cellphone" style="width:90%" data-options="label:'手机号:',required:true">
