--- a/MiniManage/WebRoot/pages/Minitj_income.html
+++ b/MiniManage/WebRoot/pages/Minitj_income.html
@@ -83,7 +83,7 @@
             <th data-options="field:'wx_screen_income',align:'center',width:80,sortable:true,formatter:formatNull">
                 插屏收入
             </th>
-            <th data-options="field:'screenEcpm',align:'center',width:80,sortable:true,formatter:rate">插屏 ECPM
+            <th data-options="field:'screenEcpm',align:'center',width:80,sortable:true,formatter:formatNull">插屏 ECPM
             </th>
 
             <!-- <th data-options="field:'wx_reg_ad',align:'center',width:80,sortable:true">注册用户来自广告占比</th>
