--- a/manager0216/src/main/resources/static/pages/configAdApp.html
+++ b/manager0216/src/main/resources/static/pages/configAdApp.html
@@ -295,94 +295,103 @@
             defaultToolbar: ['filter', 'exports'],
             height: 'full-120'
         });
-        // 初始化数据
-        $(() => {
-            $.ajax({
-                type: "get",
-                dataType: "json",
-                url: '../manage/configAdStrategy/select',
-                success: (res) => {
-                    res.forEach(function (val, index, arr) {
-                        let context = {name: val.ddName, value: val.ddId, selected: false};
-                        strategyOptionArr.push(context);
-                    });
-                },
-                error: function () {
-                    layer.msg("广告策略列表查询失败，请联系管理员！", {icon: 2});
-                }
-            })
-            $.ajax({
-                type: "get",
-                dataType: "json",
-                url: '../manage/configAdCombination/select',
-                success: (res) => {
-                    res.forEach(function (val, index, arr) {
-                        let context = {name: val.ddId + '-' + val.ddName, value: val.ddId, selected: false};
-                        combinationNames.push(context);
-                    });
-                    combinationSearch.update(
-                        {
-                            data: combinationNames,
-                            autoRow: true,
-                        }
-                    );
-                },
-                error: function () {
-                    layer.msg("自有广告组合列表查询失败，请联系管理员！", {icon: 2});
-                }
-            })
-            $.ajax({
-                type: "get",
-                dataType: "json",
-                url: '../manage/roundmatch/appname',
-                success: (res) => {
-                    res.forEach(function (val, index, arr) {
-                        let type;
-                        let appPlatform;
-                        switch (val.programType) {
-                            case 0:
-                                type = "game";
-                                break;
-                            case 1:
-                                type = "web";
-                                break;
-                            case 2:
-                                type = "public";
-                                break;
-                            default:
-                                type = "未知游戏类型";
-                                break;
-                        }
-                        switch (val.ddAppPlatform) {
-                            case "weixin":
-                                appPlatform = "wx";
-                                break;
-                            case "q":
-                                appPlatform = "qq";
-                                break;
-                            default:
-                                appPlatform = "未知平台";
-                                break;
-                        }
-                        let context = {
-                            name: appPlatform + "-" + type + "-" + val.productName,
-                            value: val.ddappid,
-                            selected: false
-                        };
-                        appNames.push(context);
-                    });
-                    appSelect.update(
-                        {
-                            data: appNames,
-                            autoRow: true,
-                        }
-                    );
-                },
-                error: function () {
-                    alert("查询失败")
-                }
+
+         // 定时初始化数据
+        let selectBoxFlush = ()=>{
+            strategyOptionArr = [];
+            combinationNames = [];
+            appNames = [];
+            $(() => {
+                $.ajax({
+                    type: "get",
+                    dataType: "json",
+                    url: '../manage/configAdStrategy/select',
+                    success: (res) => {
+                        res.forEach(function (val, index, arr) {
+                            let context = {name: val.ddName, value: val.ddId, selected: false};
+                            strategyOptionArr.push(context);
+                        });
+                    },
+                    error: function () {
+                        layer.msg("广告策略列表查询失败，请联系管理员！", {icon: 2});
+                    }
+                })
+                $.ajax({
+                    type: "get",
+                    dataType: "json",
+                    url: '../manage/configAdCombination/select',
+                    success: (res) => {
+                        res.forEach(function (val, index, arr) {
+                            let context = {name: val.ddId + '-' + val.ddName, value: val.ddId, selected: false};
+                            combinationNames.push(context);
+                        });
+                        combinationSearch.update(
+                            {
+                                data: combinationNames,
+                                autoRow: true,
+                            }
+                        );
+                    },
+                    error: function () {
+                        layer.msg("自有广告组合列表查询失败，请联系管理员！", {icon: 2});
+                    }
+                })
+                $.ajax({
+                    type: "get",
+                    dataType: "json",
+                    url: '../manage/roundmatch/appname',
+                    success: (res) => {
+                        res.forEach(function (val, index, arr) {
+                            let type;
+                            let appPlatform;
+                            switch (val.programType) {
+                                case 0:
+                                    type = "game";
+                                    break;
+                                case 1:
+                                    type = "web";
+                                    break;
+                                case 2:
+                                    type = "public";
+                                    break;
+                                default:
+                                    type = "未知游戏类型";
+                                    break;
+                            }
+                            switch (val.ddAppPlatform) {
+                                case "weixin":
+                                    appPlatform = "wx";
+                                    break;
+                                case "q":
+                                    appPlatform = "qq";
+                                    break;
+                                default:
+                                    appPlatform = "未知平台";
+                                    break;
+                            }
+                            let context = {
+                                name: appPlatform + "-" + type + "-" + val.productName,
+                                value: val.ddappid,
+                                selected: false
+                            };
+                            appNames.push(context);
+                        });
+                        appSelect.update(
+                            {
+                                data: appNames,
+                                autoRow: true,
+                            }
+                        );
+                    },
+                    error: function () {
+                        alert("查询失败")
+                    }
+                });
             });
-        });
+        }
+        setInterval(selectBoxFlush, 5000);
+				
+       
         //监听自由运营操作
         form.on('switch(switchAllowed)', function (obj) {
             let statusObj = {id: this.value, ddAllowedShow: obj.elem.checked};
