--- a/manager0216/src/main/resources/static/pages/fc_buypay.html
+++ b/manager0216/src/main/resources/static/pages/fc_buypay.html
@@ -90,8 +90,10 @@
             layer = layui.layer,
             laydate = layui.laydate, upload = layui.upload;
         var $ = layui.$;
-        $(() => {
-            $.ajax({
+        // 定时初始化数据
+        let selectBoxFlush = ()=>{
+            appNames = [];
+            $(() => {$.ajax({
                 type: "get",
                 dataType: "json",
                 url: '../manage/roundmatch/appname',
@@ -123,8 +125,8 @@
                 error: function () {
                     alert("查询失败")
                 }
-            });
-        });
+            });}) }
+        setInterval(selectBoxFlush, 5000);
         table.render({
             elem: '#table-page',
             url: operatorurl + '?datagrid=data',
