--- a/manager0216/src/main/resources/static/pages/recharge.html
+++ b/manager0216/src/main/resources/static/pages/recharge.html
@@ -102,39 +102,44 @@
             filterDone: function (val, list) {
             },
         });
-        $.ajax({
-            type: "get",
-            dataType: "json",
-            url: '../manage/roundmatch/appname',
-            success: (res) => {
-                res.forEach(function (val, index, arr) {
-                    let type;
-                    let appPlatform;
-                    switch (val.programType) {
-                        case 0:type = "game";break;
-                        case 1:type = "web";break;
-                        case 2:type = "public";break;
-                        default:type = "未知游戏类型";break;
-                    }
-                    switch (val.ddAppPlatform) {
-                        case "weixin":appPlatform = "wx";break;
-                        case "q":appPlatform = "qq";break;
-                        default:appPlatform = "未知平台";break;
-                    }
-                    let context = {name: appPlatform+ "-" +type + "-" + val.productName, value: val.ddappid, selected: false};
-                    appNames.push(context);
-                });
-                appSelect.update(
-                    {
-                        data: appNames,
-                        autoRow: true,
-                    }
-                );
-            },
-            error: function () {
-                alert("查询失败")
-            }
-        }),
+        // 定时初始化数据
+        let selectBoxFlush = ()=>{
+            appNames = [];
+            $(() => {$.ajax({
+                type: "get",
+                dataType: "json",
+                url: '../manage/roundmatch/appname',
+                success: (res) => {
+                    res.forEach(function (val, index, arr) {
+                        //console.log("我是appName :"+val.ddappid+"名字:"+ val.productName)
+                        let type;
+                        let appPlatform;
+                        switch (val.programType) {
+                            case 0:type = "game";break;
+                            case 1:type = "web";break;
+                            case 2:type = "public";break;
+                            default:type = "未知游戏类型";break;
+                        }
+                        switch (val.ddAppPlatform) {
+                            case "weixin":appPlatform = "wx";break;
+                            case "q":appPlatform = "qq";break;
+                            default:appPlatform = "未知平台";break;
+                        }
+                        let context = {name: appPlatform+ "-" +type + "-" + val.productName, value: val.ddappid, selected: false};
+                        appNames.push(context);
+                    });
+                    appSelect.update(
+                        {
+                            data: appNames,
+                            autoRow: true,
+                        }
+                    );
+                },
+                error: function () {
+                    alert("查询失败")
+                }
+            });}) }
+        setInterval(selectBoxFlush, 5000);
             table.render({
                 elem: '#table-page',
                 url: operatorurl + '?datagrid=data',
