--- a/manager0216/src/main/resources/static/pages/roundMatch.html
+++ b/manager0216/src/main/resources/static/pages/roundMatch.html
@@ -134,8 +134,7 @@
         pageSize: 5,
         delay: 500,
         filterable: true,
-        filterDone: function (val, list) {
-        },
+        filterDone: function (val, list) {},
     });
     /**
      * 游戏选择框
@@ -153,8 +152,7 @@
         pageSize: 5,
         delay: 500,
         filterable: true,
-        filterDone: function (val, list) {
-        },
+        filterDone: function (val, list) {},
     });
     /**
      * 产品选择框
@@ -172,8 +170,7 @@
         pageSize: 5,
         delay: 500,
         filterable: true,
-        filterDone: function (val, list) {
-        },
+        filterDone: function (val, list) {},
     });
     layui.use(['table', 'laydate', 'form', 'layer', 'flow'], function () {
         var table = layui.table,
@@ -427,7 +424,6 @@
             }
         });
     }
-
     /**
      * 根据ddcode删除，重写privateGetDeleteData
      * @param dataArray
