--- a/manager0216/src/main/resources/static/pages/fc_wxAddData.html
+++ b/manager0216/src/main/resources/static/pages/fc_wxAddData.html
@@ -78,13 +78,16 @@
             layer = layui.layer,
             laydate = layui.laydate;
         var $ = layui.$;
-        $(() => {
-            $.ajax({
+        // 定时初始化数据
+        let selectBoxFlush = ()=>{
+            appNames = [];
+            $(() => {$.ajax({
                 type: "get",
                 dataType: "json",
                 url: '../manage/roundmatch/appname',
                 success: (res) => {
                     res.forEach(function (val, index, arr) {
+                        //console.log("我是appName :"+val.ddappid+"名字:"+ val.productName)
                         let type;
                         let appPlatform;
                         switch (val.programType) {
@@ -111,8 +114,8 @@
                 error: function () {
                     alert("查询失败")
                 }
-            });
-        });
+            });}) }
+        setInterval(selectBoxFlush, 5000);
         table.render({
             elem: '#table-page',
             url: operatorurl + '?datagrid=data',
